Se cambia el color para el mouse hover del nombre

--- a/src/App/index.css
+++ b/src/App/index.css
@@ -1,4 +1,3 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -116,7 +115,7 @@ polyline {
 .bounce:hover {
   display: inline-block;
   animation: rubberband 0.8s ease-out;
-  color: #6A89CC;
+  color: #A3C4D9;
 }
 
 @keyframes rubberband {
